# drone_light_show

./: .gitignore  LICENSE  README.md  README_SVT.md  working.params
.devcontainer/: Dockerfile  devcontainer.json
Gazebo_files/: sim_world.sdf
Gazebo_files/TU_Delft_logo/: TU_Delft_logo.dae  model.config  model.sdf
offboard_control_pkg/: offboard_control.py  package.xml  setup.cfg  setup.py
src/offboard_control_interfaces/: CMakeLists.txt  package.xml
src/offboard_control_interfaces/msg/: Drone2Info.msg
src/offboard_control_pkg/: CMakeLists.txt  package.xml  setup.py
src/offboard_control_pkg/launch/: offboard_control_launch_file.launch.py
src/offboard_control_pkg/offboard_control_pkg/: control_node.py  drone1.py  drone2.py  drone3.py  offboard_control multi_vehicle.py  offboard_control.py  offboard_control_multi_vehicle.py
src/offboard_control_pkg/offboard_control_py/: control_node.py  drone1.py  drone2.py  drone3.py
